Edit Favourite function and update model